--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = software/ext/qtserialport
 	url = git://code.qt.io/qt/qtserialport.git
 	branch = qt4-dev
+[submodule "software/ext/googletest"]
+	path = software/ext/googletest
+	url = https://github.com/google/googletest
