--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "software/ext/velib"]
-	path = software/ext/velib
-	url = git@git.victronenergy.com:victron/velib.git
-	branch = dbus_fronius
 [submodule "software/ext/qslog"]
 	path = software/ext/qslog
 	url = https://github.com/victronenergy/QsLog.git
@@ -10,3 +6,6 @@
 	path = software/ext/qtserialport
 	url = git://code.qt.io/qt/qtserialport.git
 	branch = qt4-dev
+[submodule "software/ext/velib"]
+	path = software/ext/velib
+	url = git@github.com:victronenergy/velib.git
