bring up to date to latest velib/veutil
 - Part of velib was split into a public veutil repo. Start using that.
 - update the VeQItem signals, VeQItem pointer was removed
 - remove VeQItems slots arguments

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "software/ext/velib"]
 	path = software/ext/velib
 	url = git@github.com:victronenergy/velib.git
+[submodule "software/ext/veutil"]
+	path = software/ext/veutil
+	url = https://github.com/victronenergy/veutil
